<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Lgn-FT-2V6">
    <device id="retina4_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="Monaco.ttf">
            <string>Monaco</string>
        </array>
    </customFonts>
    <scenes>
        <!--Settings-->
        <scene sceneID="s0d-6b-0kx">
            <objects>
                <viewController id="Y6W-OH-hqX" customClass="SettingsViewController" customModule="NikoNiko" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uYJ-ov-IBd">
                                <rect key="frame" x="25" y="69" width="270" height="31"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use device settings" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQI-Kh-bWo">
                                        <rect key="frame" x="0.0" y="0.0" width="211" height="31"/>
                                        <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="18"/>
                                        <color key="textColor" name="fontColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DfO-up-lxg">
                                        <rect key="frame" x="221" y="0.0" width="51" height="31"/>
                                        <color key="onTintColor" red="0.44316029550000002" green="0.84570068119999997" blue="0.92942816019999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <connections>
                                            <action selector="useDeviceSettingsSwitchSelected:" destination="Y6W-OH-hqX" eventType="valueChanged" id="fff-ho-VPw"/>
                                        </connections>
                                    </switch>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HC7-mr-jLb">
                                <rect key="frame" x="25" y="125" width="270" height="31"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cute theme" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lyc-Do-S7n">
                                        <rect key="frame" x="0.0" y="0.0" width="211" height="31"/>
                                        <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="18"/>
                                        <color key="textColor" name="fontColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="JLv-Ym-7QR">
                                        <rect key="frame" x="221" y="0.0" width="51" height="31"/>
                                        <color key="onTintColor" red="0.44316029550000002" green="0.84570068119999997" blue="0.92942816019999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <connections>
                                            <action selector="themeSwitchSelected:" destination="Y6W-OH-hqX" eventType="valueChanged" id="kAo-6S-EYO"/>
                                        </connections>
                                    </switch>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4hz-5G-fjJ">
                                <rect key="frame" x="25" y="465" width="270" height="44"/>
                                <color key="backgroundColor" systemColor="secondarySystemFillColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="6fc-sQ-be8"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="14"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Delete all your datas ?">
                                    <color key="titleColor" systemColor="systemRedColor"/>
                                </state>
                                <connections>
                                    <action selector="deleteAllDatasButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="uuV-im-n85"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cFC-a8-RZ3">
                                <rect key="frame" x="10" y="186" width="300" height="250"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="250" id="CYH-Dx-z6j"/>
                                    <constraint firstAttribute="width" constant="300" id="MWw-9t-NLg"/>
                                </constraints>
                            </view>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                        <color key="backgroundColor" name="backGroundColor"/>
                        <constraints>
                            <constraint firstItem="HC7-mr-jLb" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="25" id="0Kw-sQ-YBc"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="4hz-5G-fjJ" secondAttribute="trailing" constant="25" id="0dP-Fp-Zy5"/>
                            <constraint firstItem="4hz-5G-fjJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="25" id="WMP-ri-CaH"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="4hz-5G-fjJ" secondAttribute="bottom" constant="10" id="bGP-80-YsJ"/>
                            <constraint firstItem="uYJ-ov-IBd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="25" id="bUt-6f-lQn"/>
                            <constraint firstItem="HC7-mr-jLb" firstAttribute="top" secondItem="uYJ-ov-IBd" secondAttribute="bottom" constant="25" id="e9M-DB-dj5"/>
                            <constraint firstItem="uYJ-ov-IBd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="25" id="gaq-0S-43t"/>
                            <constraint firstItem="cFC-a8-RZ3" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="puT-ya-UQG"/>
                            <constraint firstItem="cFC-a8-RZ3" firstAttribute="top" secondItem="HC7-mr-jLb" secondAttribute="bottom" constant="30" id="wgS-iV-hFA"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="HC7-mr-jLb" secondAttribute="trailing" constant="25" id="xmQ-Pg-Ide"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="uYJ-ov-IBd" secondAttribute="trailing" constant="25" id="y2T-hS-PCz"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="vys-XB-im1">
                        <barButtonItem key="backBarButtonItem" title="Settings" id="hkg-O9-brN">
                            <color key="tintColor" red="0.034298732880000002" green="0.0002846512652" blue="0.5804288983" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        </barButtonItem>
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="YD5-sh-nxy">
                            <color key="tintColor" red="0.034298732880000002" green="0.0002846512652" blue="0.5804288983" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <action selector="cancelModalBarButtonItemTapped:" destination="Y6W-OH-hqX" id="VGs-uk-6ku"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="En0-V0-Ako">
                            <color key="tintColor" red="0.034298732880000002" green="0.0002846512652" blue="0.5804288983" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <action selector="doneModalBarButtonItemTapped:" destination="Y6W-OH-hqX" id="Ire-zj-Wi9"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="bannerPlacement" destination="cFC-a8-RZ3" id="YT1-vS-mK3"/>
                        <outlet property="themeSwitch" destination="JLv-Ym-7QR" id="z8E-GX-dak"/>
                        <outlet property="useDeviceSettingsSwitch" destination="DfO-up-lxg" id="o1q-vn-m02"/>
                        <segue destination="ka5-I2-QGS" kind="unwind" identifier="segueToMoodBoard" unwindAction="unwindToViewControllerWithSegue:" id="myL-Y5-qIm"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                <exit id="ka5-I2-QGS" userLabel="Exit" sceneMemberID="exit"/>
            </objects>
            <point key="canvasLocation" x="1128.75" y="63.380281690140848"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="bdd-5p-x5m">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Lgn-FT-2V6" sceneMemberID="viewController">
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JbW-fY-Pe0">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="Neg-zE-Cfb"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Zk9-Qz-GJ1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="131.25" y="63.380281690140848"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="backGroundColor">
            <color red="0.80199998617172241" green="0.98799997568130493" blue="0.98400002717971802" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
        </namedColor>
        <namedColor name="fontColor">
            <color red="0.034000001847743988" green="0.0" blue="0.57999998331069946" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
        </namedColor>
        <systemColor name="secondarySystemFillColor">
            <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.16" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemRedColor">
            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
