...
                                                <rect key="frame" x="92" y="0.0" width="60" height="60"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="6LT-8x-PDs"/>
                                                    <constraint firstAttribute="width" secondItem="nuP-Fr-dgJ" secondAttribute="height" multiplier="1:1" id="ogI-R3-Hh1"/>
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="happy">
                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="moodTodayButtonsPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="z2s-KS-7uH"/>
                                                </connections>
                                            </button>
...
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KSd-mr-YVN" secondAttribute="trailing" constant="10" id="fsY-hh-CW8"/>
                            <constraint firstItem="FSs-x1-HBh" firstAttribute="top" secondItem="KSd-mr-YVN" secondAttribute="bottom" constant="25" id="hN8-jZ-ked"/>
                            <constraint firstItem="FSs-x1-HBh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="mdh-cU-2Qb"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="dEM-J1-Wxi" secondAttribute="trailing" constant="8" id="qP7-wR-vYd"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="MoodBoard" id="0ds-rM-1Yf">
                        <barButtonItem key="backBarButtonItem" title="Back" id="Smq-MV-R9Z">
                            <color key="tintColor" red="0.034298732880000002" green="0.0002846512652" blue="0.5804288983" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        </barButtonItem>
                        <barButtonItem key="leftBarButtonItem" title="settings" image="gear" catalog="system" id="n5h-jq-qG0">
                            <color key="tintColor" red="0.034298732880000002" green="0.0002846512652" blue="0.5804288983" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <segue destination="FSi-kx-6ub" kind="show" identifier="segueToSettings" id="rgb-cn-X2f"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" id="0qm-UN-5Cl">
...
