//
//  NameMood.swift
//  NikoNiko
//
//  Created by Angelique Babin on 02/12/2021.
//

import Foundation

enum NameMood: String {
    case happy
    case smiling
    case neutral
    case sad
    case disappointed
    case puzzledColor
}
